ST-189 skip not done

--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.2.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.2.md
@@ -1,6 +1,6 @@
 # LLRN 4.3.2
 
-These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 15 issues.
+These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 11 issues.
 
 ## Bugs
 
@@ -8,14 +8,11 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 - `NIM-7257` -- Medium -- HP Aruba CX Logging - fix parsing of persistent storage
 - `NIM-7267` -- Highest -- 4.3.0 OVA build failed
-- `NIM-7270` -- Medium -- Fix typo in UI
-- `NIM-7272` -- Highest -- 4.3.0 Migration fail on "threshold"
 - `NIM-7273` -- High -- FortiGate - possibly wrong MAC on link agg on cluster unit
 - `NIM-7275` -- High -- Unexpected error in /platforms/vdc/devices table
 - `NIM-7276` -- Low -- Hostname ends with a newline
-- `NIM-7278` -- Highest -- All Palo Alto firewalls (226) show fatal error - only 2 palo altos discovered correctly
-- `NIM-7279` -- Medium -- Bugfix: commands/mikrotik/_routeros/interface - Tesco (4.3.1+1)
-- `NIM-7295` -- Highest -- Airbus 4.2.0 migration to 4.3.2+1 fail
+- `NIM-7279` -- Medium -- Bugfix: commands/mikrotik/_routeros/interface (4.3.1+1)
+- `NIM-7295` -- Highest -- 4.2.0 migration to 4.3.2+1 fail
 - `NIM-7298` -- Highest -- Can't show graph with hidden transit or clouds
 - `DOS-363` -- Highest -- Jumphosts on 4.3.1 release does not seem to work
 
@@ -24,5 +21,4 @@ Anything that we considered an incorrect behavior. Something that was not workin
 Task may be associated into Epics or Stories to form complex features.
 
 - `NIM-7145` -- Medium -- CheckPoint apiUid - make it less strict
-- `NIM-7212` -- High -- Use new Meraki vendor API client
 - `NIM-7234` -- Medium -- migration: avoid scheduling the same job multiple times
