--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
@@ -1,6 +1,6 @@
 # LLRN 4.4.0
 
-These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 195 issues.
+These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 166 issues.
 
 ## Epics
 
@@ -20,23 +20,11 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 - `NIM-5094` -- Medium -- XDP Endpoints show network devices as endpoints
 - `NIM-5466` -- Highest -- Vendor API - correct error msg
-- `NIM-6073` -- Medium -- Missing phones in graphs
 - `NIM-6171` -- Medium -- ArubaCX - add AAA support
-- `NIM-6496` -- Medium -- Bugfix: commands/cisco/acl
-- `NIM-6773` -- High -- Connectivity Report - Rediscovry - Sellect All
 - `NIM-6778` -- High -- technology/routing/path-verifications - Add Path button
 - `NIM-6785` -- Medium -- Juniper Junos - Route Instance Detail private tables filtering
 - `NIM-6843` -- Highest -- Global tables should always be displayed
 - `NIM-6845` -- Low -- Snapshot Management - ADD action vs Vendor API settings
-- `NIM-7009` -- Medium -- Bugfix: commands/cisco/_viptela/v1/arp
-- `NIM-7010` -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/neighbors
-- `NIM-7011` -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/summary
-- `NIM-7012` -- Medium -- Bugfix: commands/cisco/_viptela/v1/hardware/inventory
-- `NIM-7013` -- Medium -- Bugfix: commands/cisco/_viptela/v1/interface
-- `NIM-7014` -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/interface
-- `NIM-7015` -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/neighbor
-- `NIM-7016` -- Medium -- Bugfix: commands/cisco/_viptela/v1/vrrp
-- `NIM-7055` -- Medium -- Bugfix: commands/cisco/_viptela/v1/omp/services
 - `NIM-7135` -- High -- Webhooks - cut off select in modal
 - `NIM-7182` -- High -- Broken buttons in Add Vendor dialog
 - `NIM-7193` -- Medium -- nsx-t api wrong status code 400
@@ -44,15 +32,11 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7239` -- Medium -- vmware NSX-T API no response for get method
 - `NIM-7254` -- Highest -- Migration failed - vPathLookupCheck contains corrupted data
 - `NIM-7281` -- Medium -- Bugfix: commands/mikrotik/_routeros/systemLoggingAction
-- `NIM-7283` -- Medium -- Rebuild version not collected for nx-os
 - `NIM-7313` -- Medium -- Device Attributes - Column "Value" not filterable
 - `NIM-7316` -- Medium -- Cloned Locked Snapshot shows Locked in Unloaded state
 - `NIM-7352` -- Medium -- Incorrect algorithms in API graph response
 - `NIM-7363` -- Medium -- HP Aruba CX igmp querry interval - fix
-- `NIM-7365` -- Medium -- Missing apiVersion in Ruckus VSZ POST schema
-- `NIM-7373` -- Medium -- Snapshot that failed to load can't be loaded again
 - `NIM-7387` -- Medium -- Frontend is stuck when snapshot load fails
-- `NIM-7394` -- High -- tasks/l2Interfaces/extreme - missing interfaces
 - `NIM-7398` -- Medium -- PaloAlto in globalVsys aad IPsec task
 - `NIM-7406` -- Medium -- The locked snapshot can be modified
 - `NIM-7417` -- Medium -- [API refactoring] SnapshotloadJob fail
@@ -63,23 +47,20 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7434` -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/vrrp
 - `NIM-7435` -- Medium -- Bugfix: commands/arista/_eos/vxlan/interfaceVxlan
 - `NIM-7439` -- Highest -- Graph - Can't open any site
-- `NIM-7440` -- Medium -- Weird error during maintenance
 - `NIM-7441` -- Medium -- Cannot load previous snapshot
-- `NIM-7445` -- High -- Cisco PID is parsed incorrectly (regular expression doesn't match +)
 - `NIM-7447` -- High -- Failures When Caching Graph Nodes in Snapshotload Job
 - `NIM-7449` -- High -- NSX-t wrong mapping of edgeCluster members
 - `NIM-7453` -- High -- Hosts table is not showing for a specific ios-xe devices
 - `NIM-7461` -- Medium -- Dev02 Update Unloads All Snapshots
 - `NIM-7465` -- High -- Graph Intent Checks - doens't work after TSSTRICT refactor
 - `NIM-7470` -- High -- L3 gateway table still not correct
-- `NIM-7474` -- Medium -- AQL: lock timeout (while loading collections)
 - `NIM-7479` -- High -- Continuous Azure discovery
 - `NIM-7486` -- Highest -- Cloned snapshot does not retain site separation from original
 - `NIM-7492` -- Medium -- Delete device from snapshot is super slow
 - `NIM-7504` -- High -- Invalid credentials fail on unexpected failure
 - `NIM-7505` -- Highest -- Meraki discovery stuck (APIv1)
 - `NIM-7512` -- Highest -- Starting snapshot doesn't start and moves user to SSH/Telnet tab without telling why
-- `NIM-7513` -- High -- Site Separation - Migration issue from v4.2 to v4.3.x - CGI
+- `NIM-7513` -- High -- Site Separation - Migration issue from v4.2 to v4.3.x
 - `NIM-7518` -- High -- "Unexpected null or undefined" when radial view on a topology with 1+ node out of tree
 - `NIM-7523` -- Highest -- Error while transforming an array chunk in a stream: SyntaxError: Unexpected end of JSON input
 - `NIM-7531` -- Highest -- Missing labels in Meraki vendor form
@@ -87,22 +68,17 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7550` -- High -- xDP connections to the same device are pointed to the transit
 - `NIM-7556` -- Medium -- Bugfix: commands/paloalto/showConfigPushedSharedPolicyVsys
 - `NIM-7557` -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/sdWanSites
-- `NIM-7558` -- Medium -- Bugfix: commands/mikrotik/_routeros/ipRoute
 - `NIM-7559` -- Medium -- Bugfix: commands/cisco/routingTable
 - `NIM-7561` -- Highest -- xDP connections between HP Aruba AP & HP Arubasw are pointed to the transit
 - `NIM-7566` -- Highest -- Ruckus API with invalid URL says that apiVersion is wrong
 - `NIM-7570` -- Highest -- Ruckus is not in the list of API vendors
 - `NIM-7572` -- High -- [4.4.0+1] unspecified command for API vendors
-- `NIM-7574` -- High -- Cisco APIC is available in Vendor API settings
-- `NIM-7575` -- High -- API Jobs unspecified command
 - `NIM-7579` -- High -- Broken BFS layouting
 - `NIM-7582` -- High -- Broken BFS layouting - release/4.4.0
 - `NIM-7583` -- Highest -- [4.4.0+1] Delete user button is white with white text
-- `NIM-7584` -- High -- CLONE - unspecified command for API vendors
 - `NIM-7586` -- Highest -- [4.4.0+1] Missing delete icon
 - `NIM-7588` -- Highest -- [4.4.0+1] Empty host detail in pathlookup
 - `NIM-7594` -- Highest -- [v4.4.0+1] - Mangement/Changes -> empty table when comparing snapshot
-- `NIM-7597` -- Highest -- Lots of Warning: Failed prop type: The prop `timezone` is marked as required
 - `NIM-7599` -- Highest -- 4.4.0+1 Dropdown in connectivity errors detail is not fully shown
 - `NIM-7602` -- Medium -- tasks/license - asa & per-context licenses
 - `NIM-7603` -- Highest -- 4.4.0+1 Transit cloud, edges, and All network in topology graph disappear when intent checks are applied
@@ -113,11 +89,9 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7616` -- Highest -- The wrong color for Leave button
 - `NIM-7617` -- Highest -- [4.4.0+1] Table componet - Display settings - Label for Toggles are not clickable
 - `NIM-7618` -- Highest -- [4.4.0+1] Device Explorer - Missing ACL table for firewall devices
-- `NIM-7619` -- Medium -- [4.4.0+1] Management - Changes - data are invalid
 - `NIM-7626` -- Highest -- [4.4.0+1] Read User - has available Device Attrbute table
 - `NIM-7627` -- Medium -- [4.4.0+1] Read User is able to modify records in device attributes
 - `NIM-7635` -- Highest -- Juniper MIST - hostname fix - Release/4.4.0
-- `NIM-7637` -- Highest -- WeWork - tasker fail - cursor not found
 - `NIM-7641` -- Highest -- Updater unique constrained violated on MIST
 - `NIM-7642` -- Highest -- Ruckus - same AP client saved twice (unique constraint index fail)
 - `NIM-7645` -- Highest -- Ruckus vIntL2 exists more than once [4.4.0+2]
@@ -170,9 +144,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7247` -- High -- Create juniper mist API client
 - `NIM-7252` -- High -- UI support for LDAP StartTLS
 - `NIM-7301` -- High -- Cisco Catalyst 9300/9200 switches - power supply and fans
-- `NIM-7302` -- High -- Cisco Catalyst 9600 switches - power supply and fans
 - `NIM-7318` -- High -- Full version of Font Awesome
-- `NIM-7322` -- High -- Enable Meraki v1 in UI
 - `NIM-7334` -- High -- [4.4.0+1] Add Cisco APIC vendor API support to UI
 - `NIM-7343` -- High -- virtualMachines - network interface id
 - `NIM-7345` -- High -- Security model - implement new fields added to interface selector
@@ -208,7 +180,6 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-6391` -- Medium -- Extreme XOS/EXOS AAA support
 - `NIM-6654` -- Medium -- Prototype IP/CIDR component endpoints
 - `NIM-6779` -- High -- Cisco APIC API client
-- `NIM-7027` -- Medium -- Cisco FMC - use cache
 - `NIM-7086` -- Medium -- Site Separation - change drang & drop effect in the table
 - `NIM-7199` -- High -- Show (global) tables in the frontend when no snapshot is loaded
 - `NIM-7206` -- Medium -- Add endpoint for new table of ACLs applied globally
