--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
@@ -1,18 +1,14 @@
 # LLRN 5.0.0
 
-These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 606 issues.
+These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 545 issues.
 
 ## Epics
 
 Epics are high-level features, that may consist of many tasks.
 
 - `NIM-6756` -- High -- Upgrade node to version 16 (kw: nodejs)
-- `NIM-7098` -- Medium -- Optimize validation in Cisco command folder
 - `NIM-7374` -- High -- Missing Interface Original Name
-- `NIM-7458` -- Medium -- Next Major Release notes 5.0.0
 - `NIM-7524` -- Highest -- Role-based access control (RBAC) - Phase 1
-- `NIM-7873` -- High -- RBAC - Phase 1 - Frontend (webng) part
-- `NIM-8024` -- Medium -- API Tables in 5.0.0
 - `NIM-8201` -- Medium -- EoL Updates in 5.0.0
 - `DOS-79` -- High -- Nimpee Install scripts refactoring (deb pkg refactoring)
 - `DOS-188` -- Highest -- Upgrade our product to Debian 11
@@ -24,9 +20,7 @@ Stories are high-level features, that may consist of many tasks. These would typ
 - `NIM-6329` -- Highest -- Structured logging and detailed access logs (syslog)
 - `NIM-7712` -- Medium -- Analyze and prepare to refactor login flow
 - `NIM-7875` -- High -- Implement RBAC phase 1 frontend
-- `NIM-7948` -- Medium -- IPv6 backend - list of changes
 - `NIM-8124` -- Highest -- API versioning
-- `NIM-8143` -- Medium -- Inconsistent role names, role assignment across local and ldap/sso users
 
 ## Bugs
 
@@ -38,11 +32,8 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-6017` -- High -- Hidden STP edges still respect STP instance visibility
 - `NIM-6238` -- Medium -- Path inspector - highlighted edges in other tabs
 - `NIM-6430` -- High -- Path Simulation for Dual-Homed FEXes is not optimal
-- `NIM-6444` -- Medium -- Cisco N7K - FEX not detected - RAI PoC
 - `NIM-6471` -- Medium -- HP Aruba CX Mroute/IGMP snooping
 - `NIM-6592` -- Medium -- Problem with resolving secondary HSRP as a next hop
-- `NIM-6676` -- Medium -- Device name (hostname) include domain-name on NX-OS (nxos)
-- `NIM-6771` -- High -- Some hosts marked as user and some as unreachable
 - `NIM-6862` -- High -- Passwords are not masked when loading a font fails
 - `NIM-7051` -- High -- Link in notification is poorly visible
 - `NIM-7053` -- Highest -- Fix Dialog buttons default variants
@@ -51,7 +42,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7186` -- Medium -- Pathlookup mpls path inspector issues
 - `NIM-7187` -- High -- Pixel shift when STP instance is enabled/disabled
 - `NIM-7188` -- High -- Snapshot inventory & Snapshot creation - incorrect icon size in switch
-- `NIM-7201` -- Medium -- Huawei - Handshake failed: signature verification failed
 - `NIM-7250` -- High -- Saved Views - Favorite option not working
 - `NIM-7282` -- High -- The UI is stuck in check when api /licenses/validity returns 400
 - `NIM-7325` -- Medium -- Pathlookup Caching Issue
@@ -78,7 +68,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7571` -- High -- Connectivity report shows "connection error", but CLI log shows "Session end undefined"
 - `NIM-7573` -- High -- Snapshot creation wrong type
 - `NIM-7581` -- High -- E2E path seems not to be evaluated properly
-- `NIM-7607` -- Medium -- API died on fatal error
 - `NIM-7611` -- High -- Tags component allows to change value when disabled
 - `NIM-7650` -- Medium -- Path-Lookup Fails while Formatting Response
 - `NIM-7670` -- High -- Loading options shown twice in searchable Select
@@ -92,7 +81,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7695` -- Medium -- Bugfix: commands/cisco/ospf/neighborDetail
 - `NIM-7697` -- Medium -- Bugfix: commands/cisco/_aci/coopInternalInfoIpDb
 - `NIM-7699` -- Medium -- Bugfix: commands/cisco/l2vpn/vpls
-- `NIM-7702` -- Medium -- Unhandled promise rejection because redis can't persist on disk
 - `NIM-7706` -- High -- Finicky behaviour pressing ENTER in path lookup forms
 - `NIM-7709` -- Medium -- Log malformed body
 - `NIM-7710` -- Medium -- Traffic routed via Null0 interface has to be dropped
@@ -106,27 +94,20 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7770` -- Medium -- E2E DROP: Callback execution threw an exception.
 - `NIM-7773` -- High -- Download site report results in API not responding
 - `NIM-7775` -- High -- NTP servers are not collected for Cisco WLC 8.10
-- `NIM-7789` -- Medium -- Snapshot in error state can't be deleted
 - `NIM-7824` -- Medium -- Loops in the multicast path lookup
-- `NIM-7825` -- High -- STP missing on Arista [muticast path lookup “DROP: Nexthop not found”]
 - `NIM-7832` -- Highest -- Refreshing access token is completely broken
 - `NIM-7833` -- Medium -- Filters on protocol don't work properly in routing/path-verifications
 - `NIM-7845` -- Highest -- nimpeeMigrate: DB init script broken!
 - `NIM-7846` -- Highest -- Cannot login to the osAdmin page on port :8443
 - `NIM-7850` -- Medium -- Make yarn test faster than before edit in NIM-6756
 - `NIM-7890` -- Medium -- Snapshots missing name and note data
-- `NIM-7892` -- Medium -- LDAP users cannot change timezone
 - `NIM-7907` -- Highest -- Backup paths in the main GUI and System Administration
 - `NIM-7911` -- Medium -- ScanWorker tasks are published 2x
 - `NIM-7922` -- High -- StackWise virtual are missing Chassis SN in the VSS table
-- `NIM-7969` -- Medium -- Problems in role creation
 - `NIM-7972` -- High -- Policies returns isSystem null/undefined
 - `NIM-7979` -- High -- API_INSUFFICIENT_RIGHTS error
 - `NIM-7997` -- High -- Duplicate IPs table is including unnumbered interfaces (false positive)
-- `NIM-7998` -- Medium -- object-hash works differently in node and browser
 - `NIM-8004` -- Highest -- Admin user loses all rights when edited
-- `NIM-8005` -- Highest -- Cannot save roles to user
-- `NIM-8029` -- Medium -- Invalid documentation link
 - `NIM-8048` -- High -- IPF Inventory - Interfaces - Original Name parameter is empty
 - `NIM-8052` -- High -- Cannot create new user, filed rolelds is missing
 - `NIM-8075` -- Highest -- GC of data in Redis is misbehaving / needs investigation [develop]
@@ -142,7 +123,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8127` -- Medium -- Missing Comeware 7 RAGG interface information
 - `NIM-8128` -- High -- Avoid redirect when API is not available
 - `NIM-8131` -- High -- Routing table MPLS backup routes [L3 Loop - MPLS - wrong VRF used]
-- `NIM-8132` -- Medium -- CGI - Fortinet incorrectly drop flow - exec utm
+- `NIM-8132` -- Medium -- Fortinet incorrectly drop flow - exec utm
 - `NIM-8146` -- Medium -- Pathlookup - default GW algo chooses wrong MAC
 - `NIM-8148` -- High -- Juniper Mist fix routing table for AP
 - `NIM-8149` -- Medium -- Technology => Addressing => Managed IP, missing mac for IP without ARP
@@ -151,7 +132,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8165` -- High -- IP not found on Meraki device
 - `NIM-8166` -- Medium -- E2E over VPLS cloud is not accurate
 - `NIM-8170` -- High -- User without any builtin role cannot login
-- `NIM-8172` -- Medium -- Cannot disable Vendors API - get Invalid Input error
 - `NIM-8173` -- High -- Policies edit - table structure does not follow menu structure
 - `NIM-8180` -- Medium -- Endpoint /tables/management/configuration ignores enabled api scope
 - `NIM-8181` -- High -- Missing routing table on Cisco Viptela
@@ -181,8 +161,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8263` -- High -- User with team role/policy does not see any api access scopes
 - `NIM-8264` -- Medium -- Bugfix: commands/cisco/_asa/showVersion
 - `NIM-8268` -- Medium -- commands/cisco/mac - ios-xe wlc
-- `NIM-8269` -- High -- intNameToStandardFormat vs. TwoGigabitEthernet shortened as Tw
-- `NIM-8270` -- High -- commands/cisco/mac - nxos
 - `NIM-8271` -- Medium -- commands/arista/_eos/mac
 - `NIM-8272` -- High -- commands/arista/_eos/stp/vlanDetail
 - `NIM-8276` -- Medium -- Bugfix: commands/cisco/dhcp/ipDhcpSnooping
@@ -196,20 +174,16 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8289` -- Medium -- Bugfix: commands/cisco/_wlcIosxe/apName/ethernetStatistics
 - `NIM-8290` -- Medium -- Checkpoint Gaia - uptime parsing fix
 - `NIM-8294` -- Highest -- Remove API version dependency from reports
-- `NIM-8298` -- High -- Device Explorer missing page tree
 - `NIM-8301` -- Medium -- Bugfix: commands/cisco/mcast/pimRp
 - `NIM-8303` -- Highest -- API not found after 5.0.0 installation
-- `NIM-8304` -- Highest -- Graph docs have /v1 prefixes
 - `NIM-8305` -- Medium -- Removing selected Discovery Tasks remove ALL Tasks, not just the selected ones
 - `NIM-8306` -- Highest -- Intent checks from graph doesn't work
 - `NIM-8307` -- Medium -- HP Aruba cx parsing issue with commands/hp/_arubacx/igmp/group
 - `NIM-8310` -- Medium -- joiSchemas update ipv4NetSchemaRequired which is wrongly referenced now
-- `NIM-8313` -- High -- Device explorer is missing device filter
 - `NIM-8314` -- Medium -- Snapshot isn't selected in Snapshot Management
 - `NIM-8317` -- High -- F5 VIPs - same on multiple boxes and interfaces + missing VIP
 - `NIM-8318` -- Medium -- Host table for VIP addresses on F5
 - `NIM-8320` -- Highest -- discovery worker and syslog worker binaries missing module
-- `NIM-8321` -- High -- wrong mapping for ipv6 addresses in pushFhrpToIpList function
 - `NIM-8322` -- High -- Discovery freezes when maxsize of log Transport files is reached
 - `NIM-8323` -- Highest -- getStandardizedTunnelProtocol fix ipv6/ipv4 case
 - `NIM-8327` -- Highest -- Dev11 - migration to 5.0 failing
@@ -237,27 +211,19 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8365` -- Medium -- Bugfix: commands/f5/_big-ip/listLtmVirtual
 - `NIM-8368` -- Medium -- HP Arubasw DHCP relay
 - `NIM-8369` -- Medium -- Insoncistent DHCP options format
-- `NIM-8370` -- Medium -- F5 - Path lookup broken - missing support for Auto-last-hop
 - `NIM-8371` -- Medium -- Cisco ftd l3Interfaces fix CMD reference
 - `NIM-8373` -- Medium -- ArubaCX - Stack Member - version is the BootRom not the Software version
-- `NIM-8377` -- Medium -- Network Searches not filtering correctly
 - `NIM-8378` -- Medium -- Auth in api incorrectly adds custom scope when user has zero assigned roles
-- `NIM-8379` -- Highest -- User without any assigned system policy sees in UI settings/api-tokens, webhooks
 - `NIM-8384` -- Medium -- tasks/mcast/igmp query interval missing
 - `NIM-8385` -- Medium -- ipv6 address lookup in the UI doesn't seem to work
 - `NIM-8386` -- Medium -- Update task dependency reference to another task
 - `NIM-8387` -- Medium -- Client IP missing for (HP ArubaIAP)
-- `NIM-8388` -- Medium -- Bugfix: `commands/cisco/_viptela/v1/ipSec/ikeSessions`
 - `NIM-8389` -- Medium -- Bugfix: commands/cisco/_viptela/v1/configRunning
 - `NIM-8390` -- Medium -- (ipv4 or ipv6) on an l3Interface update updater
 - `NIM-8392` -- Medium -- Cisco APIC - scope property can be empty
 - `NIM-8393` -- Highest -- Remove version prefix from api scopes on frontend
 - `NIM-8395` -- Medium -- Cisco ACI - fix group name to pcTag translation for l2extOut groups
-- `NIM-8396` -- Medium -- Built-in policy clone Save button is never enabled
-- `NIM-8397` -- High -- Settings => Advanced -- Application crashed
 - `NIM-8398` -- Medium -- Pathlookup ACI -- two same packets
-- `NIM-8401` -- Medium -- Table - broken design for rows
-- `NIM-8402` -- Medium -- Broken desing in webng
 - `NIM-8403` -- High -- Cisco ACI/APIC update filter names to be consistent between tasks
 - `NIM-8407` -- High -- Detail/copy should not be available for any built-in policy
 - `NIM-8408` -- High -- ACI security evaluation don't work for remote leaf
@@ -267,17 +233,13 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8423` -- Medium -- Cloud device can't be unhidden
 - `NIM-8424` -- High -- Cisco DHCP Server - Lease expiration returns miliseconds instead of seconds
 - `NIM-8425` -- Medium -- Dell OS10 minor bugs in discovery
-- `NIM-8426` -- Medium -- Empty images when downloading site reports with Firefox
-- `NIM-8431` -- Medium -- API_NOT_FOUND when clicking on technology/dhcp/server/excluded-ranges (jupee)
 - `NIM-8432` -- Medium -- Tables cannot be recognized
 - `NIM-8436` -- Medium -- UX - RBAC role - policies picker - missing description
 - `NIM-8437` -- Medium -- Pathlookup checks for ICMP pathlookup
-- `NIM-8439` -- Medium -- Migration of graphview failed
 - `NIM-8443` -- Medium -- SSO login fails when some group has assigned roleId: null
 - `NIM-8448` -- Medium -- Tree picker omits siblings of matches
 - `NIM-8452` -- Medium -- Users API - roleNames vs roleIds
 - `NIM-8454` -- Highest -- 5.0.0 Migration - Adding STP vlanPortStatus - memory hungry & stuck
-- `NIM-8458` -- Low -- Checkpoint - Missing model information
 - `NIM-8461` -- High -- IPv6 column filter error
 - `NIM-8463` -- Medium -- Cisco IOS - RSVP interface, get localAddress
 - `NIM-8464` -- Medium -- This page isn't available when user has no assigned ApiScope for first/default tab of table
@@ -291,7 +253,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8482` -- Medium -- remove age in IPv6 neighbor discovery (API)
 - `NIM-8483` -- High -- Discovery stuck when Cisco Viptela controller is not available (error 503)
 - `NIM-8486` -- Medium -- Missing rbac middleware on some /tables
-- `NIM-8502` -- Medium -- Tasker -- license not found on disk error
 - `NIM-8503` -- Highest -- Updater fails on index unique constraint violation
 - `NIM-8505` -- Medium -- Prevent API vendors to return duplicate devices
 - `NIM-8506` -- Highest -- Certificate upload fails with TypeError: a is not a function
@@ -300,14 +261,12 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8511` -- Medium -- (5.0.0) Version number doesn't appear nicely next to IP Fabric logo
 - `NIM-8513` -- Highest -- Backup password shown in plaintext in System administration in 5.0
 - `NIM-8514` -- High -- Device devType classification - IPv6 local routes
-- `NIM-8515` -- Highest -- OpenLDAP test fails on certificate
 - `NIM-8517` -- High -- tasks/routingTable - ipv6 mask missing
 - `NIM-8518` -- Medium -- IPv6 column equal filter matches cidr instead
 - `NIM-8519` -- High -- DHCP relay - the quality of data
 - `NIM-8521` -- High -- UI crash when you open Diagrams without snapshots
 - `NIM-8523` -- Medium -- Release test - Changed user/not user classification in MAC address table
 - `NIM-8524` -- High -- Release test - Missing L3 gateways in technology/vlans/l3-gateways
-- `NIM-8528` -- Medium -- RSVP Neighbors - Link protection
 - `NIM-8529` -- Medium -- Release test - Missing IPv4 Addresses in Virtual Machine interfaces
 - `NIM-8530` -- Medium -- STP instances table - inconsistent hostname and vlan name fix
 - `NIM-8536` -- Medium -- Page refresh while calculating reports results in "Calculation failed" status
@@ -315,7 +274,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8545` -- Medium -- Cisco APIC - missing tDn -> validation fails
 - `NIM-8546` -- Medium -- DHCP relay on HP comware is not correctly check if is enabled
 - `NIM-8551` -- Medium -- (v5.0.0) Table Description - New tables don't have table description, with complete information about endpoint...
-- `NIM-8565` -- Highest -- Cannot unload snapshot after 5.0 Upgrade
 
 ## Tasks
 
@@ -329,8 +287,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-4306` -- Highest -- Meraki - API change v0 to v1 (Deadline 2022-08-05)
 - `NIM-4916` -- High -- Cisco ACI - contracts, tenants, applications, zone filtering
 - `NIM-5113` -- Medium -- Show number of licensed+number of total devices in snapshot summary in left pane
-- `NIM-5885` -- High -- IPv6 - Dual Stack Basic Discovery
-- `NIM-6012` -- High -- Add support for IPv4 discontiguous masks
 - `NIM-6114` -- Medium -- Cisco/PTP - add support for IOS-XR and add device status property
 - `NIM-6440` -- High -- Refactor TabView
 - `NIM-6451` -- High -- Fix Overlay className
@@ -347,7 +303,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7044` -- High -- Create Meraki vendor api client
 - `NIM-7045` -- Medium -- Prioritize disconnect in vendor api clients
 - `NIM-7062` -- High -- Add warning to update page
-- `NIM-7075` -- Medium -- Pathlookup - add support for ACI security
 - `NIM-7106` -- High -- Rename Extreme Family XOS -> EXOS
 - `NIM-7116` -- High -- AWS - implement IGW basic support
 - `NIM-7117` -- Medium -- Vendors - Update 'custom' attribute
@@ -374,7 +329,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7402` -- Medium -- Update InputOptions Typescript Types in Path Lookup Simulation
 - `NIM-7500` -- Medium -- API RSVP task - new tables
 - `NIM-7520` -- Medium -- IPv6 tables extension
-- `NIM-7525` -- Highest -- RBAC - Guarded API Endpoints [Phase 1]
 - `NIM-7527` -- Medium -- Global ACL table - add "outputPolicy" column
 - `NIM-7537` -- Low -- Add documentation to tasks/_init for API vendors
 - `NIM-7541` -- High -- spanning-tree/inconsistencies/stp-cdp-ports-mismatch - incorrect column name
@@ -384,7 +338,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7562` -- High -- RBAC Phase 1 wireframing UX
 - `NIM-7565` -- Medium -- Add stp root ID to VLAN L3 gateway
 - `NIM-7569` -- High -- Removed unused code from snapshots
-- `NIM-7590` -- Medium -- Pathlookup - use virtual machines table for hosts
 - `NIM-7591` -- Medium -- Host table - add virtual machines (ipv4)
 - `NIM-7608` -- Medium -- Please check purpose of acl sequence number
 - `NIM-7609` -- High -- Avoid unnecessary request when scrolling to bottom of typeahead
@@ -397,7 +350,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7652` -- Medium -- Limit the mask width in path-lookup in network mode.
 - `NIM-7654` -- High -- Enable value filtering in device attributes table
 - `NIM-7655` -- Medium -- E2E test: starting VRF
-- `NIM-7657` -- Medium -- Create VRF specific E2E path lookup tests
 - `NIM-7663` -- High -- New column for ptp table
 - `NIM-7700` -- Medium -- Document API endpoints
 - `NIM-7708` -- High -- Ruckus Wireless Controller - add support
@@ -416,8 +368,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7793` -- High -- AWS - map target='local' routes
 - `NIM-7794` -- Medium -- AWS - verify route tables with edge associations
 - `NIM-7795` -- High -- Add "indeterminate" state of checkbox
-- `NIM-7799` -- Medium -- Recover broken MBL snapshot on dev02
-- `NIM-7805` -- Medium -- Add Cisco APIC to Vendor API UI
+- `NIM-7799` -- Medium -- Recover broken snapshot on dev02
 - `NIM-7808` -- High -- Implement Tree Picker
 - `NIM-7810` -- Medium -- Implement StringSet to support IPv6 in path-lookup code
 - `NIM-7815` -- High -- Implement vRoles assignment for ldap, sso logins
@@ -436,7 +387,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7863` -- Medium -- Aruba CX - interfaces - encapsulation / duplex / missing
 - `NIM-7872` -- Medium -- Update backend after changing vendor api options to mandatory
 - `NIM-7874` -- Medium -- Move roles, policies, scopes types to utils
-- `NIM-7878` -- High -- Add built-in flag to policies
 - `NIM-7879` -- High -- Design assigning roles to LDAP groups
 - `NIM-7880` -- Highest -- Update app left menu to fit RBAC
 - `NIM-7881` -- Medium -- Implement Roles management UI
@@ -450,16 +400,13 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7898` -- High -- Add column with role names to /tables/users
 - `NIM-7899` -- High -- Add isAdmin to token for users in isAdmin roles
 - `NIM-7900` -- Medium -- Replace old scopes with a list of assigned roles in users management page
-- `NIM-7901` -- Medium -- Extend error handling in /policies, /roles
 - `NIM-7903` -- Medium -- Replace old scopes with RBAC roles for LDAP groups
 - `NIM-7904` -- High -- Implement handling of isAdmin to /users/me/scopes/api
 - `NIM-7905` -- Highest -- Add RBAC roles to /settings/ldap endpoints
 - `NIM-7910` -- Medium -- New task RSVP updater support
 - `NIM-7916` -- Medium -- Add RSVP protocol to graphs
 - `NIM-7917` -- Highest -- Updater - Parallel processing of WLC ap list & Fexes
-- `NIM-7923` -- Medium -- Add throw NOT_FOUND if trying add edges to non existing vApiScopes in /policies
 - `NIM-7925` -- Medium -- UI RSVP task - new tables
-- `NIM-7928` -- Medium -- Add throw NOT_FOUND if trying add edges to non existing vertices in /policies, /roles
 - `NIM-7937` -- Medium -- Path-lookup tests: option to print command line help
 - `NIM-7943` -- Medium -- Always show detailed error from config initiliazation
 - `NIM-7945` -- Medium -- Rename roles, policiesIds, apiScopesIds
@@ -468,15 +415,13 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7953` -- Medium -- Add deviceStatus column into PTP local clock table
 - `NIM-7954` -- Medium -- security model - implement 'num-and-eq' operator for numbers
 - `NIM-7955` -- Medium -- Add scripts generating RBAC data
-- `NIM-7961` -- Medium -- Juniper - dhcp relay
 - `NIM-7970` -- Medium -- Fix validation in /roles, /policies
 - `NIM-7975` -- Medium -- Add isSystem, description to policies in nimpeeMigrate
 - `NIM-7983` -- Medium -- DHCP Server - new tables
 - `NIM-7984` -- Medium -- DHCP Relay - new tables
-- `NIM-7985` -- Medium -- Implement roles into LDAP
 - `NIM-7986` -- Medium -- Implement roles into SSO
 - `NIM-7987` -- Medium -- Migrate LDAP and SSO configs
-- `NIM-7996` -- Medium -- RedHat - EoL detail is missing part descriptions (they are collected)
+- `NIM-7996` -- Medium -- EoL detail is missing part descriptions (they are collected)
 - `NIM-8001` -- Medium -- RBAC middleware should work with URLs that contain param names not values
 - `NIM-8007` -- Medium -- Juniper Mist - Add VLAN Interfaces
 - `NIM-8008` -- High -- Implement roleIds to scope mapping, remove scope in /users
@@ -520,19 +465,16 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8186` -- Medium -- L3 gateways table - add root ID column
 - `NIM-8191` -- Medium -- Extreme EoL update for 5.0.0
 - `NIM-8192` -- Medium -- Modify Check Point inventory - pid for HW appliances
-- `NIM-8193` -- Medium -- localIpv6Address and neiIpv6Address columns
 - `NIM-8198` -- Medium -- Save data for new task APIC
 - `NIM-8200` -- Medium -- Checkpoint EoL dates for 5.0.0
 - `NIM-8216` -- Highest -- pushFhrpToIpList function in tasks/l3Interfaces/helpers.js is failing
 - `NIM-8217` -- Highest -- Extreme EXOS - missing mgmt port
 - `NIM-8218` -- High -- Remove truncateRbacCollections from migrate in final release
 - `NIM-8223` -- Medium -- Consider design of "get URL of current view"
-- `NIM-8225` -- Medium -- webng api version autonomous sync
 - `NIM-8232` -- Medium -- Design intent rule editor
 - `NIM-8247` -- Medium -- Update @ipfabric/utils to latest version, retest ApiScopes assigning in Policies
 - `NIM-8253` -- Medium -- Frontend support for IPv6 and IPv6Routing columns
 - `NIM-8255` -- Highest -- implement init in nimpeeMigrate binary
-- `NIM-8256` -- Highest -- Merge "init" and "migrate" functions of nimpeeMigrate into one binary
 - `NIM-8257` -- Medium -- Feature Matrix update tool does not handle well tags with slash
 - `NIM-8259` -- Medium -- Add validation to policies edit endpoint
 - `NIM-8260` -- Medium -- Migrate fails assign roles for users with zero scope
@@ -549,7 +491,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8381` -- Highest -- Change discovery scope guards which don't start discovery to settings
 - `NIM-8412` -- Medium -- Rename read policy to others in migrate
 - `NIM-8413` -- Medium -- Update RBAC seed data in migrate
-- `NIM-8441` -- Medium -- Discovery of some API vendors doesn't works on 10.0.32.133
 - `NIM-8442` -- Medium -- Disable security evaluation on ACI devices
 - `NIM-8460` -- Medium -- Fix UI of copying policy or role
 - `NIM-8509` -- High -- Improve string validation of inputs for shell scripts
@@ -604,7 +545,6 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-7992` -- Medium -- DNS Server and Domain Info - Huawei
 - `NIM-7993` -- Medium -- DNS Server and Domain Info - Riverbed
 - `NIM-7995` -- Medium -- DNS Server and Domain Info - Mikrotik
-- `NIM-8014` -- Medium -- Updater - save IPv6 list in vIntL3 collection
 - `NIM-8016` -- High -- Task routingTable - ipv6 - RA necessary changes
 - `NIM-8017` -- Medium -- Graphs Add "RIB IPv6" and "DGW IPv6" protocols
 - `NIM-8028` -- Medium -- Sockets structured logging
@@ -630,5 +570,4 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8324` -- High -- Add Manage IP table for Ipv6
 - `NIM-8325` -- Medium -- Add Routes table for ipv6
 - `NIM-8418` -- Medium -- DHCP Documentation
-- `NIM-8419` -- Medium -- DNS Documentation
 - `NIM-8450` -- Medium -- technology/dhcp/server/leases IP column is empty
