--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -1,16 +1,13 @@
 # LLRN 6.0.0
 
-These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 580 issues.
+These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 539 issues.
 
 ## Epics
 
 Epics are high-level features, that may consist of many tasks.
 
 - `NIM-4425` -- Medium -- cisco sg commands fixing (mother of all cisco sg fixes)
-- `NIM-6801` -- Medium -- Zero-trust for virtual instances in cloud environments
 - `NIM-7949` -- High -- Role-based access control (RBAC) - Phase 2
-- `NIM-8254` -- Medium -- NAE-to-Backend-5.1
-- `NIM-8567` -- Medium -- Improve support for VLANs on L2 interfaces
 - `NIM-8706` -- Medium -- Attributes — Phase I — end of Sept 22
 - `NIM-8727` -- Medium -- Cisco FabricPath Support
 - `NIM-8743` -- Medium -- API Tables in 6.0.0
@@ -31,7 +28,6 @@ Stories are high-level features, that may consist of many tasks. These would typ
 - `NIM-8175` -- Medium -- Device attributes - plan of basic implementation on FE
 - `NIM-8177` -- Medium -- RBAC - plan Phase 2 on FE
 - `NIM-8492` -- High -- Specify how API will work with custom device attributes
-- `NIM-8542` -- Medium -- Fix & unify path-lookup CIDR validations
 - `NIM-8735` -- Medium -- NAT - save data to DB
 - `NIM-9285` -- Medium -- Update EULA
 
@@ -39,7 +35,6 @@ Stories are high-level features, that may consist of many tasks. These would typ
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- `NIM-5522` -- Medium -- Bugfix: commands/aws/_ec2/describeVpnConnections
 - `NIM-5864` -- Medium -- AWS routingTable - add support for routes with prefix lists
 - `NIM-6164` -- Medium -- commands/cisco/mac - nxos
 - `NIM-6178` -- Medium -- commands/hp/_comware/ipVpnInstance - wrong parsing of vrf names with spaces
@@ -58,7 +53,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8267` -- Medium -- Bugfix: commands/dell/_ftos/interfacesSwitchport
 - `NIM-8302` -- Medium -- License page design is broken
 - `NIM-8316` -- Medium -- Always true statement in _prepareTracePrefix()
-- `NIM-8353` -- Medium -- CGI - E2E Issue Found: UNHANDLED ERROR: Unknown device view entity
+- `NIM-8353` -- Medium -- E2E Issue Found: UNHANDLED ERROR: Unknown device view entity
 - `NIM-8363` -- High -- getIpLongs needs to be fixed
 - `NIM-8404` -- Medium -- Snapshots in error state are not unloaded
 - `NIM-8429` -- High -- Incorrect running discovery content
@@ -68,7 +63,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8490` -- Low -- Jumphost ssh key unprintable chars when dowloading over API
 - `NIM-8525` -- Medium -- AWS pathlookup - host to gateway
 - `NIM-8526` -- Medium -- Snapshot load - API vendors are initialised
-- `NIM-8550` -- Medium -- Attributes Table not searching correctly
 - `NIM-8557` -- Medium -- Posting Intent Rule with Incorrect Endpoints via API returns 200 OK
 - `NIM-8558` -- Medium -- Junos EX2200 - Unexpected interfaces created - parsing error
 - `NIM-8590` -- Low -- E2E - fallback to OID if forwarding to IP fails
@@ -81,7 +75,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8684` -- High -- Cannot destructure property 'isAdmin' of 'user' as it is undefined. on worker call OPTIONS /v5.0/os/logs
 - `NIM-8685` -- Medium -- SNMPv3 ACL parsing error for Cisco NXOS
 - `NIM-8691` -- Medium -- Cisco ASR 9K - Long discovery time
-- `NIM-8692` -- Medium -- Duplicities in sysDevInventory
 - `NIM-8696` -- High -- Typo in the shaper
 - `NIM-8707` -- Medium -- Bugfix: commands/juniper/_junos/route
 - `NIM-8709` -- High -- Graphs - incorrect state for "All network" group
@@ -115,7 +108,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8951` -- Highest -- Invalid number of parameters in saveFabricPath function
 - `NIM-8955` -- High -- Fix NAE testing tool after upgrade to Winston 3
 - `NIM-8963` -- Highest -- Device attribute is not listed in options
-- `NIM-8967` -- Medium -- Jupee spooky state
 - `NIM-8971` -- High -- MDPS - discovery unexpected prompt
 - `NIM-8977` -- Medium -- Dell powerconnect detection
 - `NIM-8985` -- High -- Error is logged as undefined
@@ -150,7 +142,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9084` -- Medium -- NSX-T missing API endpoints for BGP commands
 - `NIM-9087` -- Medium -- Bugfix: commands/cisco/ptp/platformServo (5.0.1+10)
 - `NIM-9089` -- Medium -- Bugfix: commands/hp/_arubasw/dhcp/relay (5.0.1+10)
-- `NIM-9090` -- Medium -- Bugfix: commands/cisco/ipv6NeighborVrfAll (5.0.1+10)
 - `NIM-9091` -- Medium -- Bugfix: commands/arista/_eos/ipHelperAddress (5.0.1+10)
 - `NIM-9092` -- Medium -- Problem with report Parsing issues to callhome server
 - `NIM-9093` -- Medium -- BGP task - fix loading routeMaps dependency + fix IOS assignment parsing
@@ -167,7 +158,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9129` -- Medium -- Bugfix: commands/cisco/lldp/lldpNeiDetail (5.0.1+10)
 - `NIM-9130` -- Medium -- Bugfix: commands/hp/_arubaIap/aps (5.0.1+10)
 - `NIM-9131` -- Medium -- Bugfix: commands/cisco/acl (5.0.1+10)
-- `NIM-9132` -- High -- Empty site name in policy/routing tables
 - `NIM-9137` -- High -- Broken UI page: Settings / Advanced / Configuration Management
 - `NIM-9138` -- Medium -- Invalid link to graph
 - `NIM-9140` -- Medium -- nsx-t bgpNeighborsStatus different output for vrf routers
@@ -222,13 +212,9 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9288` -- Medium -- Bugfix: commands/cisco/igmp/group (5.0.2+5)
 - `NIM-9289` -- Medium -- Bugfix: commands/cisco/showInterfaces (5.0.2+5)
 - `NIM-9290` -- Medium -- Palo Alto MAC address from interface parsing issues
-- `NIM-9293` -- Highest -- Fix Windows eslint errors
 - `NIM-9297` -- Medium -- Since API 5.0.2+7 (maybe sooner?) API does not generate /etc/nginx/sites-enabled/nginx-api-dynamic and thus nginx fails to route requests to API
-- `NIM-9301` -- High -- Fix EULA buttons
-- `NIM-9302` -- Medium -- AWS Regions does not like Copy/Paste multiple regions
 - `NIM-9305` -- Highest -- Reports - Site Low Level Design - can't be generated
 - `NIM-9311` -- Medium -- Parsing of ACL info for NX-OS is broken
-- `NIM-9312` -- Medium -- Cisco ACI discovery bug: session times out after 20 seconds - ver 5.0.2+5
 - `NIM-9313` -- Medium -- Jumphost configuration does not allow port in address specification
 - `NIM-9316` -- High -- Fabricpath updater doesn't work properly
 - `NIM-9319` -- Medium -- Dell FTOS, cant detect OS version on some switches
@@ -245,12 +231,10 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9362` -- Highest -- Number of all records in /inventory/devices table does not match with attribute scope policy
 - `NIM-9364` -- Medium -- QA - errors on juniper NAT
 - `NIM-9372` -- Medium -- Attributes with not selected value are applied to table filter
-- `NIM-9374` -- Highest -- Attribute filter ignored in hosts v4 table
 - `NIM-9375` -- High -- /os/logs should always be allowed by RBAC
 - `NIM-9381` -- Medium -- Snapshot job name has extra bracket
 - `NIM-9390` -- Highest -- Adding RBAC for Fabric Path Inventory Fails
 - `NIM-9397` -- High -- SyslogWorker - cron trigger - config isn't downloaded for all devices
-- `NIM-9399` -- Low -- EoL table is missing URL and other parameters
 - `NIM-9402` -- Highest -- Missing Portchannel members
 - `NIM-9413` -- Highest -- Table intent verification rule not updated
 - `NIM-9415` -- Medium -- Attributes Filter component - wrong snapshot id
@@ -261,10 +245,8 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9444` -- Medium -- Listing graph clouds doesn't consider active attribute filters
 - `NIM-9449` -- Medium -- Attributes keys or values are not sorted
 - `NIM-9452` -- Highest -- Insufficient Rights error (default permissions)
-- `NIM-9453` -- High -- Policies component - API endpoint - search using API endpoint url doesn't work
 - `NIM-9471` -- Medium -- ACI pathlookup routing issue
 - `NIM-9483` -- High -- Meraki URL validation is to strict
-- `NIM-9491` -- Medium -- RBAC - API Scopes tree - Device Invetory bad location
 - `NIM-9493` -- Highest -- Table does not work with no access to settings and reports
 - `NIM-9499` -- Medium -- Cisco IOS - commands/cisco/showInterfaces fix mapping ipv6 address
 - `NIM-9524` -- Medium -- Fix hostname reference in `powerAndFan` task
@@ -331,8 +313,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8222` -- Medium -- Implement "get URL for current view" table feature
 - `NIM-8234` -- Medium -- Implement Table Description modal
 - `NIM-8265` -- Medium -- Implement attribute scope into policy edit page
-- `NIM-8266` -- High -- Extend policy endpoints with filter scopes
-- `NIM-8308` -- Medium -- Implement command `show lldp remote-device all` to get LLDP information
 - `NIM-8326` -- Medium -- RabbitMQ config to @ipfabric/backend-utils
 - `NIM-8383` -- Medium -- LAG/Po not visible in Port-Channel Member State Table if no interface associated
 - `NIM-8440` -- High -- ACI - pathlookup security
@@ -347,10 +327,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8498` -- Medium -- Structured logged in discovery scan worker
 - `NIM-8499` -- Medium -- Structured logging in discovery syslog worker
 - `NIM-8500` -- Medium -- Structured logging in discovery net worker
-- `NIM-8501` -- Medium -- Enable security evaluation on ACI devices
-- `NIM-8531` -- Medium -- Change default passwords to pass VALID_PASSWORD_REGEX in utils
 - `NIM-8532` -- Medium -- Remove ! from VALID_PASSWORD_REGEX in utils
-- `NIM-8541` -- Medium -- Take path-lookup CIDR settings from utils in webng
 - `NIM-8559` -- Medium -- Route maps tables
 - `NIM-8566` -- Medium -- Update texts in the platform
 - `NIM-8571` -- Medium -- Transform guardScope to openapi tags
@@ -388,10 +365,8 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8728` -- Highest -- Cisco FabricPath tables
 - `NIM-8737` -- Medium -- Hostnames & domain name - new table columns
 - `NIM-8742` -- High -- Versa routing issues
-- `NIM-8759` -- High -- Make SSO callbacks unversioned
 - `NIM-8778` -- Medium -- Cisco FabricPath - add executive summary, update documentation and release notes
 - `NIM-8787` -- Medium -- Add rule UID to security model
-- `NIM-8817` -- Medium -- IPv4 - fix model for eigrp
 - `NIM-8821` -- Medium -- IPv4 - fix model for l2vpn
 - `NIM-8824` -- Medium -- IPv4 - fix model for mpls
 - `NIM-8828` -- Medium -- IPv4 - fix model for ospf
@@ -416,7 +391,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8901` -- Medium -- Route Maps - save data to DB
 - `NIM-8902` -- Medium -- Route Maps - provide data in API
 - `NIM-8903` -- Medium -- Route Maps - show data in UI
-- `NIM-8908` -- High -- FabricPath - verify model and parsing based on customer data
 - `NIM-8911` -- Medium -- Update upgrade scripts to reflect changes in minpeeMigrate
 - `NIM-8912` -- High -- FabricPath - Add feature-set support for cisco nexus.
 - `NIM-8915` -- Medium -- Move common logging types & functions from API to backend-utils
@@ -424,7 +398,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8919` -- High -- Add button to toggle side panel in graphs
 - `NIM-8920` -- Medium -- Collect transceiver information for HA interfaces on Palo Alto firewalls
 - `NIM-8922` -- Medium -- Replace deep-equal with fast-deep-equal
-- `NIM-8924` -- Medium -- Document RBAC configuration examples
 - `NIM-8926` -- Medium -- Make ApiTable load only visible columns
 - `NIM-8929` -- Medium -- Implement rbac attribute filters in /tables
 - `NIM-8930` -- High -- Replace deep-equal with fast-deep-equal [webng]
@@ -437,9 +410,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8973` -- Medium -- Update BGP neighbors table with route-map info
 - `NIM-8974` -- Medium -- Refactor apiScopes assignments under system policies
 - `NIM-8986` -- Highest -- Adapt FE to changes in attribute endpoints
-- `NIM-8987` -- Medium -- Implement rbac attribute filters in /graphs
-- `NIM-8990` -- High -- Azure routing fixes to 6.0
-- `NIM-8992` -- High -- Issue with userflow - not starting flows
 - `NIM-8993` -- Medium -- Extend roleIdsToScope to contain scopes based on custom policies
 - `NIM-9007` -- Medium -- Format PolicyApplied Flag in VxLan Header
 - `NIM-9009` -- Medium -- Cisco SG - commands/cisco/_sg/dot1xUsers add support for mac in xxxx.yyyy.zzzz format
@@ -489,7 +459,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-9282` -- Medium -- Disable Button in loading state
 - `NIM-9286` -- Highest -- Update EULA text on frontend
 - `NIM-9294` -- Highest -- Reject EULA for all users with new EULA incoming
-- `NIM-9314` -- High -- Jumphost address validation doesn't allow port (5.0.2+7)
 - `NIM-9337` -- High -- Fabricpath tables doesn't have any indexes (except primary)
 - `NIM-9446` -- High -- UX - No attributes avaiable
 - `NIM-9448` -- Medium -- Redesign attributes filter in header
@@ -525,15 +494,11 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8434` -- High -- Cisco ACI E2E - swap groupPolicyId
 - `NIM-8456` -- High -- Checkpoint - Rule Number appears when Rule Name is empty
 - `NIM-8543` -- High -- Take E2E CIDR settings from utils in webng
-- `NIM-8544` -- Medium -- Change max. network mode mask from /8 to /16
-- `NIM-8548` -- Medium -- Large path-lookup is neither canceled nor returned to on leaving path-lookup page
 - `NIM-8634` -- Medium -- IPv4 - fix model for bgp
 - `NIM-8635` -- Medium -- Route Maps - Cisco implementation
 - `NIM-8637` -- Medium -- Prefixlists - Cisco implementation
 - `NIM-8645` -- Medium -- Save parsed frequency data (wlcApList, clientList)
 - `NIM-8671` -- Medium -- Cisco security - ipv6 - IOS/IOS-XE
-- `NIM-8689` -- Medium -- New tables for Cisco FabricPath
-- `NIM-8703` -- Medium -- Discovery Workers scaling
 - `NIM-8716` -- Medium -- tasks/devInfo - update validation
 - `NIM-8717` -- Medium -- cisco asa - devInfo.context
 - `NIM-8719` -- Medium -- palo alto - devInfo.context
@@ -542,21 +507,17 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8722` -- Medium -- cisco nx-os - vdc - devInfo.context
 - `NIM-8732` -- Medium -- Forcepoint - basic discovery
 - `NIM-8736` -- Medium -- PBR - save data to DB
-- `NIM-8738` -- Medium -- tasks/devInfo - tables update (hostname/domain improvements)
 - `NIM-8739` -- Medium -- Cisco ACI Security evaluation - add evaluation on node containing information about destination
 - `NIM-8740` -- Medium -- New hostname/domain handling - validation schema
 - `NIM-8760` -- Medium -- prefix list tables
 - `NIM-8763` -- Medium -- Prefixlists - model
 - `NIM-8767` -- Medium -- Arista EOS - hostname & domain handling
-- `NIM-8768` -- Medium -- task/devInfo - make the new hostname and domain name props required
 - `NIM-8770` -- High -- NAT - Palo Alto
 - `NIM-8771` -- High -- NAT - Fortinet
 - `NIM-8772` -- High -- NAT - Juniper
 - `NIM-8773` -- High -- NAT - model
 - `NIM-8774` -- Medium -- Forcepoint - add executive summary, update documentation and release notes
-- `NIM-8776` -- Medium -- NAT - add executive summary, update documentation and release notes
 - `NIM-8779` -- Medium -- Hostname & domain name - add executive summary, update documentation and release notes
-- `NIM-8780` -- Medium -- NSX-T security - add executive summary, update documentation and release notes
 - `NIM-8781` -- Medium -- Virtual contexts - add executive summary, update documentation and release notes
 - `NIM-8788` -- Medium -- Implement rule UID - Fortinet FortiGate
 - `NIM-8789` -- Medium -- Implement rule UID - Cisco FMC
@@ -598,8 +559,6 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8989` -- Medium -- Cisco ACI - add intraEpg rules for L2 traffic (bdVnid in vxlan header)
 - `NIM-9015` -- Medium -- Azure - wrong VRF for subnets in routingTable
 - `NIM-9018` -- Medium -- Azure - fix routes between network gateways in the same gateway subnet
-- `NIM-9051` -- Medium -- Forcepoint - update NAE lab doc & bitwarden
-- `NIM-9063` -- Medium -- MDPS - environment detection workaround to re-enable Checkpoint discovery
 - `NIM-9075` -- Highest -- Handle new SecurityType in UI
 - `NIM-9097` -- High -- appSyslogWorker - update hostname processing
 - `NIM-9112` -- Medium -- RoutePolicies documentation
